fixed the spelling in the logo text and created items category page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mafundza's Closet</title>
+    <title>Mafundza Closet</title>
   </head>
   <body class="flex min-h-screen">
     <div id="root" class="min-w-full min-h-full"></div>
